[package]
name = "iot-server"
version = "0.1.0"
edition = "2021"

[dependencies]
rumqttc = "0.24.0"
rustls-pemfile = "2.2.0"
rustls = "0.22.4"
rustls-pki-types = "1.12.0"

tokio = { version = "1.0", features = ["full"] }
sqlx = { version = "0.7", features = ["postgres", "runtime-tokio", "chrono", "macros"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
axum = "0.7"
serde = { version = "1.0", features = ["derive"] }
dotenv = "0.15"