[package]
name = "iot-server"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
rumqttc = "0.24.0"
rustls = "0.22.4"
rustls-pemfile = "2.2.0"
rustls-pki-types = "1.12.0"
sqlx = { version = "0.7", features = ["postgres", "runtime-tokio", "chrono", "macros"] }
axum = "0.7"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
dotenv = "0.15"
tower = "0.4"
tower-http = { version = "0.5", features = ["cors"] }
thiserror = "1.0"

ort = "2.0.0-rc.8"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"